<resources>
    <!-- Theeban raj-->
    <string name="app_name">Royal Kitchen</string>
    <string name="view_booking">View Booking</string>
    <string name="home_work_place">Work Place</string>
    <string name="home_subtitle">Choose your delicous package</string>
    <string name="home_cabin_category">Cabin Category</string>
    <string name="home_foods">Foods</string>
    <string name="home_cabin">Cabin</string>
    <string name="home_booking_details">Booking Details</string>
    <string name="home_emplyees">Emplyees</string>
    <string name="home_todo" />
    <string name="Booking_1_booking_details">Booking Details</string>
    <string name="Booking_1_email_address">Email Address</string>
    <string name="Booking_1_mobile_number">Mobile Number</string>
    <string name="Booking_1_check_in_date">Check-in Date</string>
    <string name="Booking_1_check_in_time">Check-in Time</string>
    <string name="Booking_1_number_of_cabins">Number of Cabins</string>
    <string name="Booking_1_discount">Discount -</string>
    <string name="Booking_1_fare">Fare -</string>
    <string name="Booking_1_10">10%</string>
    <string name="Booking_1_49_32">$ 49.32</string>
    <string name="Booking_1_book_now">Book Now</string>
    <string name="payment_booking_details">Payment Details</string>
    <string name="payment_card_number">Card Number</string>
    <string name="payment_name_on_card">Name on Card</string>
    <string name="payment_card_type">Card Type</string>
    <string name="payment_card_expiry">Card Expiry</string>
    <string name="payment_cvc_number">CVC Number</string>
    <string name="payment_pay_now">Pay Now</string>
    <string name="booking_client_search_here">Search Here...</string>
    <string name="booking_client_21_1">21/08/2021 - 22/08/2021</string>
    <string name="booking_c1">Cabin type</string>
    <string name="b_a_search_here">Search Here...</string>
    <string name="b_a_1">Theebanraj U.</string>
    <string name="b_a_it_1">IT19063324@my.sliit.lk</string>
    <string name="b_a_n_1">076558653</string>
    <string name="b_a_32">$ 32</string>
    <string name="bookig_cancel">Cancel</string>

    <!--Shothiri-->
    <string name="RegText1">Here\'s your first step with us!</string>
    <string name="RegText2">Name</string>
    <string name="RegText3">E-Mail</string>
    <string name="RegText4">Mobile Number</string>
    <string name="RegText5">Password</string>
    <string name="RegText6">Already have an account</string>
    <string name="RegText7">Work Place</string>
    <string name="RegText8">Choose your delicious package</string>
    <string name="RegText9">He\'ll want to use your yacht,and I don\'t want this thing smelling like fish.</string>
    <string name="RegText10">Foods</string>
    <string name="RegText11">Cabin</string>
    <string name="EDText2">Employee Name</string>
    <string name="EDText3">Employee ID</string>
    <string name="EDText4">Employee Contact Name</string>
    <string name="EDText">Gender</string>
    <string name="EDText6">NIC Number</string>
    <string name="EDText01">Add</string>
    <string name="EDText02">Employee</string>
    <string name="EDText03">Details</string>
    <string name="ACCText1">Add</string>
    <string name="ACCText2">Cabin</string>
    <string name="ACCText3">Category</string>
    <string name="ACCText4">Cabin Category</string>
    <string name="ACCText5">Cabin Type</string>
    <string name="ACCTet6">Cabin Description</string>
    <string name="ACCText7">Cabin SIze</string>
    <string name="EmText1">Back</string>
    <string name="EmText2">Employees</string>
    <string name="EmText3">Add</string>
    <string name="EmText4">Employee Name</string>
    <string name="EmText5">A room assigned to one person.May have one or more beds.</string>
    <string name="EmText6">The room size or area of Single Rooms are generally between 37m sq to 45m sq</string>
    <string name="EmText7">Room Type in hotel-</string>
    <string name="EmText8">Single Room</string>
    <string name="CText1">Back</string>
    <string name="CText2">Cabin Category</string>
    <string name="CText3">Add</string>
    <string name="CText4">Cabin Name</string>
    <string name="todo">TODO</string>

    <!--    Jerry-->
    <string name="Welcome">Welcome to Royal Kitchen</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="f.password">Forgot Password?</string>
    <string name="newuser">New User? Register Now.</string>
    <string name="login">LOGIN</string>
    <string name="add">Add</string>
    <string name="cabin">Cabin</string>
    <string name="c.name">Cabin_name</string>
    <string name="c.type">Cabin_type</string>
    <string name="c.description">Cabin_description</string>
    <string name="c.price">Cabin_price</string>
    <string name="submit">SUBMIT</string>
    <string name="num">01</string>
    <string name="c.category">Cabin Category</string>
    <string name="price">$19.99</string>
    <string name="recipe">Recipe</string>
    <string name="text">Lorem ispum dolar sit amet,consectetur</string>
    <string name="prepare">Preparation Time</string>
    <string name="time">30 min</string>
    <string name="booking">Book Now</string>
    <string name="text2">adipiscing elit. Aenean porta laoreet quam, et</string>
    <string name="text3">finibus elit dictum quis. Aliquam iaculis ac libero</string>
    <string name="text4">nec dictum</string>
    <string name="search">Search</string>
    <string name="c.title">Cabin Title</string>
    <string name="r.category">Room Category - Single Room</string>
    <string name="r.number">Room Number - 1005</string>
    <string name="beds">No of Beds - 2</string>
    <string name="fare">Fare -</string>
    <string name="image">image  i used</string>
    <string name="email_include">Enter your Email</string>
    <string name="c.ID">Cabin_ID</string>


    <!--    Abinaya-->
    <string name="desc">BIRIYANI</string>
    <string name="back">Back</string>
    <string name="foods">Foods</string>
    <string name="hot">Hot deals</string>
    <string name="item">Item Name 01</string>
    <string name="pricee">$19.99</string>
    <string name="recipedesc">I want to make a searchview with rounded bordered for my android application. So far i made rounded border with white background but search icon and cancel icon disappear and no text</string>
    <string name="prep">Preparation Time</string>
    <string name="min">30 min</string>
    <string name="t1">Food Name</string>
    <string name="t2">Room Category-single room</string>
    <string name="t3">Room Number -1</string>
    <string name="t4">No of Beds -1</string>
    <string name="t5">Fare -$52.99</string>
    <string name="t6">Foods</string>
    <string name="t7" />
    <string name="t8">Back</string>
    <string name="t9">Add</string>
    <string name="food">Foods</string>
    <string name="fname">Food Name</string>
    <string name="ftype">Food Type</string>
    <string name="fdesc">Food Description</string>
    <string name="fprice">Food Price</string>
    <string name="submi">Submit</string>
    <string name="name">Name</string>
    <string name="mnumber">Mobile Number</string>
    <string name="theeban">Theebanraj . U</string>
    <string name="gmail">theeban@gmail.com</string>
    <string name="mnumb">0766558653</string>
    <string name="next">Next</string>
    <string name="next1">Next</string>
    <string name="title_activity_main17">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="recprice">Rs.300</string>
    <string name="btd_22">Check Now</string>
    <string name="btn_f1">Edit</string>
    <string name="btn_f">Delete</string>
    <string name="invalid_checkindate">Please Enter a Check in Date</string>
    <string name="invalid_checkintime">Please Enter a Check in Time</string>
    <string name="invalid_quantity">Please Enter a Number of Cabins</string>
    <string name="invalid_email">Please Enter a Email Address</string>
    <string name="invalid_mobilenumber">Please Enter a Contact Number</string>


</resources>